2001-06-21  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/new-*/main.c (do_set_xml): Fix to use correct
	termination condition and g_string API

2001-06-20  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/new-*/main.c (do_set_xml): Don't save unless
	apply_settings is set

2001-06-20  Richard Hestilow  <hestilow@ximian.com>

	* capplets/new-background-properties/applicer.c
	(get_geometry): Handle properly the case where centered/tiled
	image is larger than the screen/preview.

2001-06-20  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/new-background-properties/applier.c
	(is_nautilus_running): Fixed nitems check
	(set_root_pixmap): Passing -1 makes the function just set the
	pixmap to what it was

2001-06-18  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/new-*/main.c (do_set_xml): Use read () rather than
	fread () to make sure to catch end-of-file. Gracefully handle
	no-data case.

2001-06-12  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/new-mouse-properties/main.c (ok_cb):
	(cancel_cb): Add #ifdef HAVE_XIMIAN_ARCHIVER around some parts
	missing it

2001-06-07  Christian Rose  <menthos@menthos.com>

	* capplets/desktop-links/Appearances.directory,
	capplets/desktop-links/Multimedia.directory,
	capplets/desktop-links/Peripherals.directory,
	capplets/desktop-links/UIOptions.directory,
	capplets/gnome-edit-properties/gnome-edit-properties.desktop,
	capplets/mime-type/mime-type.desktop,
	capplets/new-ui-properties/behavior.desktop,
	capplets/screensaver-properties/screensaver-desktops/
	screensaver-properties.desktop,
	capplets/sound-properties/sound-properties.desktop,
	capplets/theme-switcher/theme-selector.desktop:
	Modified Swedish entry.

2001-05-05  Bradford Hovinen  <hovinen@ximian.com>

	* configure.in: Add check for libximian_archiver; try include
	cflags and libs only if the archiver is present *
	capplets/*/main.c: Add #ifdef's around anything that uses the
	Ximian archiver so that the capplets can compile without it
