@@ -384,6 +384,7 @@ main (int argc, char **argv)
 	{
 		outside_location = TRUE;
 		do_set_xml (FALSE);
+		if (prefs == NULL) return -1;
 		prefs->frozen++;
 	} else {
 		outside_location = FALSE;
